Use zsh on screen

--- a/.screenrc
+++ b/.screenrc
@@ -5,5 +5,7 @@ hardstatus on
 hardstatus alwayslastline "%H | %w%=%02c"
 termcapinfo xterm* ti@:te@
 
+shell /usr/local/bin/zsh
+
 defbce "on"
 term xterm-256color
